# vfd-tools

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  builder.dockerfile  docker-compose.state.yml  docker-compose.traefik.yml  env.config.sh  env.services.sh  settings.json  state.dockerfile  vfd
.github/workflows/: build.yml  release-builds.yml
config/traefik/: tls.yml
scripts/: autocomplete.sh  resolve-build-target.sh  shell-setup.fish  shell-setup.sh  vfd.sh
scripts/autocompletes/: vfd.bash  vfd.elvish  vfd.fish  vfd.powershell  vfd.zsh
scripts/state/: state-inspector.sh
src/: build.rs  cli.rs  logs.rs  main.rs  runner.rs  runner.sh  settings.rs
src/runner/: commander.rs  mod.rs  runner_app.rs  state.rs  traefik.rs  utils.rs
src/runner/commander/: docker_compose.rs  git.rs  mod.rs
