# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "vfd-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vfd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.94"
clap_complete = "4.1.5"
reqwest = "0.11.16"
tokio = { version = "^1.27.0", features = ["full"] }
